[project]
name = "docling-pdf-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "samfarrelldn", email = "sam@farrellgroup.com.au" }
]
requires-python = ">=3.10"
dependencies = [
    "docling>=2.63.0",
]

[project.scripts]
docling-pdf-helper = "docling_pdf_helper:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
